# StockSonar

./: .cursorrules  .env.example  .env.llm  .gitignore  .mcp.json  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.gemini/: settings.json
docs/: ARCHITECTURE.md  DEMO_GUIDE.md  gemini_test_prompts.md  problem_statement.md
keycloak/: stocksonar-realm.json
scripts/: call_all_mcp_tools.py  check_stack_health.py  e2e_common.py  ps2_interactive.py  run_integration_tests.py  run_judge_demo.py  test_client.py
src/stocksonar/: __init__.py  __main__.py  config.py  exceptions.py  server.py  testing_factory.py
src/stocksonar/auth/: __init__.py  provider.py  role_verifier.py  scopes.py
src/stocksonar/cache/: __init__.py  redis_cache.py
src/stocksonar/middleware/: __init__.py  audit.py  http_rate_limit.py  rate_limiter.py  tool_guard.py
src/stocksonar/services/: __init__.py  market_overview.py  portfolio.py  portfolio_alerts.py  watchlist.py
tests/: __init__.py  conftest.py
tests/base/: test_cache.py  test_exceptions_and_pagination.py  test_extended_tools.py  test_http_rate_limit_middleware.py  test_integration_list_tools.py  test_macro_upstream.py  test_prompts_ps2.py  test_rate_limiter.py  test_scopes.py  test_tools_smoke.py  test_upstream_mfapi.py  test_upstream_news.py  test_upstream_yfinance.py
tests/integration/: __init__.py  keycloak_pkce.py  test_oauth_pkce_e2e.py
tests/ps2/: test_market_overview_and_resources.py  test_portfolio_alerts_merge.py  test_portfolio_tools.py  test_ps2_cross_source.py  test_what_if_history.py
(+35 files in other folders)
