[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stocksonar"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: needs Keycloak + MCP + Redis from docker compose on localhost",
]

[tool.setuptools]
packages = ["stocksonar"]

[tool.setuptools.package-dir]
"" = "src"
